# audio-courier

./: .gitignore  .tokeignore  AGENTS.md  LICENSE  LICENSE_ACTIVATION.md  README.md  RELEASE.md  biome.json  components.json  eslint.config.js  index.html  justfile  package.json  package.json.sig  pnpm-lock.yaml  temp_speaker.rs  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
.husky/: pre-commit
.tauri/: audio-courier_signer.key  audio-courier_signer.key.pub
docs/: 产品介绍与销售文档.md  面试软件用户使用教程.md
public/: splashscreen.html
scripts/: bump-version.ts  cos.ts  embedding.ts  env.ts  llm.ts  opencc.ts  patch-version.ts  release.mjs  release.ts  rstar.py  xunfei.ts
src/: App.css  App.tsx  ChatList.tsx  Conversation.tsx  global.d.ts  main.tsx
src-tauri/: .clippy.toml  .gitignore  Cargo.toml  build.rs  deny.toml  setup.sh  setup_vosk.ps1  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: SystemAudioDump  free_plan.txt
src-tauri/capabilities/: default.json  desktop.json
src-tauri/crates/macos-audio-capture/: Cargo.toml
src-tauri/crates/macos-audio-capture/src/: lib.rs  rust_native.rs  swift_helper.rs
src-tauri/examples/: audio_dump.swift  beep.rs  capture.rs  llm_bench.rs  microphone.rs  read_wav.rs  screen_capture_kit.rs  simple_prerecord.rs  tones.rs  transfer.rs
src-tauri/icons/: icon.icns
src-tauri/permissions/: autogenerated.toml
src-tauri/speechmatics-rs/: autogen.json
src-tauri/speechmatics-rs/src/batch/models/: alignment_config.rs  create_job_response.rs  data_fetch_config.rs  error_response.rs  job_detail_error.rs  job_mode.rs  job_type.rs  language_identification_config.rs  notification_config.rs  operating_point.rs  output_config_srt_overrides.rs  recognition_display.rs  sentiment_channel_summary.rs  sentiment_segment.rs  sentiment_speaker_summary.rs  sentiment_summary_detail.rs  summarization_config.rs  summarization_result.rs  tracking_data.rs  transcription_config_additional_vocab_inner.rs  transcription_config_punctuation_overrides.rs  transcription_config_speaker_diarization_config.rs  translation_config.rs  translation_sentence.rs
src-tauri/speechmatics-rs/src/realtime/: mod.rs
src-tauri/speechmatics-rs/src/realtime/models/: audio_added.rs  audio_format.rs  diarization_config.rs  end_of_transcript.rs  error.rs  info.rs  max_delay_mode_config.rs  mod.rs  operating_point.rs  punctuation_overrides.rs  recognition_display.rs  recognition_metadata.rs  recognition_started.rs  speaker_diarization_config.rs  transcription_config.rs  translated_sentence.rs  translation_config.rs  vocab_word_one_of.rs  warning.rs
src-tauri/speechmatics-rs/tests/: demo.rs
src-tauri/src/: audio_stream.rs  constant.rs  lib.rs  license.rs  llm.rs  loopback.rs  loopback_crossbeam.rs  loopback_resample.rs  macos_system_audio.rs  main.rs  provider_config.rs  transcript.rs  transcript_vendors.rs  utils.rs
src-tauri/src/llm/: api.rs  llm.rs  stt.rs  stt_realtime.rs
src-tauri/src/transcript_vendors/: assemblyai.rs  deepgram.rs  deepgram_api.rs  deepgram_sdk.rs  gladia.rs  revai.rs  speechmatics.rs
src-tauri/tools/: Cargo.toml  tauri.conf.json
src-tauri/tools/.cargo/: config.toml
src/components/: AboutDialog.tsx  AudioRecoding.tsx  ChatContainer.tsx  LicenseCenter.tsx  LicenseSignerApp.tsx  LicenseSignerCenter.tsx  LlmProviderDialog.tsx  MarkdownMessage.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx  MoreMenu.tsx  ProviderConfigField.tsx  TitleBar.tsx  TranscriptProviderDialog.tsx  TypingIndicator.tsx  UpdateDialog.tsx  Waruls.tsx
src/components/icons/: Clear.tsx  Refresh.tsx
src/components/ui/: dropdown-menu.tsx  scroll-area.tsx  sonner.tsx
src/hooks/: use-toast.ts
src/lib/: appConfig.ts  audio.ts  clipboard.ts  cpal.ts  llm.ts  logger.ts  providerOfficialLinks.ts  recordingState.ts  resumeImport.ts  system.ts  updater.ts
src/stores/: index.ts
src/types/: audio.ts  license.ts  llm.ts  provider.ts
src/utils/: index.ts
updater/: latest.json
