[package]
name = "audio-courier"
version = "1.0.1"
description = "A Tauri App for audio capture"
authors = ["superwindcloud"]
edition = "2024"
rust-version = "1.91.0"
keywords = ["audio", "capture", "loopback"]
resolver = "3"
readme = "../README.md"
homepage = "https://github.com/super1windcloud/audio-courier"
repository = "https://github.com/super1windcloud/audio-courier"
license = "GPL"
default-run = "audio-courier"

[lib]
name = "tauri_courier_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16.0"
tokio-stream = "0.1.17"
reqwest = { version = "0.12.24", features = ["json", "multipart", "stream", "gzip", "brotli"] }
dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
rand = "0.9.2"

hound = "3.5.1"
dasp = "0.11.0"
rubato = "0.16.2"
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
tungstenite = { version = "0.28.0", default-features = false, features = ["__rustls-tls", "http", "handshake"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3.31"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"


[[bin]]
name = "transfer"
path = "src/bin/transfer.rs"


[dev-dependencies]
