[package]
name = "audio-courier"
version = "1.1.2"
description = "A Tauri App for audio capture"
authors = ["superwindcloud"]
edition = "2024"
rust-version = "1.94.0"
keywords = ["audio", "capture", "loopback"]
resolver = "3"
readme = "../README.md"
homepage = "https://github.com/super1windcloud/audio-courier"
repository = "https://github.com/super1windcloud/audio-courier"
license = "GPL"
default-run = "audio-courier"
autobins = true
autolib = true
autotests = false
autoexamples = true
autobenches = false

[features]
default = ["api", "macos-system-audio-swift", "macos-system-audio-rust"]
api = []
sdk = []
macos-system-audio-swift = ["dep:macos-audio-capture", "macos-audio-capture/swift-helper"]
macos-system-audio-rust = ["dep:macos-audio-capture", "macos-audio-capture/rust-native"]

[lib]
name = "tauri_courier_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"


[[bin]]
name = "audio-courier"
path = "src/main.rs"




[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
cpal = "0.17.3"
tokio-stream = "0.1.18"
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream", "gzip", "brotli"] }
dotenv = "0.15.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "rt"] }
rand = "0.10.0"
chrono = { version = "0.4.44", features = ["serde"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
hound = "3.5.1"
dasp = "0.11.0"
rubato = "2.0.0"
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
semver = "1.0.27"
sha2 = "0.11.0"

tungstenite = { version = "0.29.0", default-features = false, features = ["__rustls-tls", "http", "handshake", "rustls-tls-native-roots", "rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots", "rustls-tls-native-roots"] }
futures-util = "0.3.32"
inquire = "0.9.4"
deepgram = "0.9.2"
bytes = "1.11.1"
futures = "0.3.32"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-process = "2"
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
native-tls = "0.2"
tungstenite = { version = "0.29.0", default-features = false, features = ["native-tls"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["native-tls"] }
winreg = "0.56.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
macos-audio-capture = { path = "crates/macos-audio-capture", optional = true, default-features = false }






[dev-dependencies]


[lints.clippy]
all = "warn"
needless_bool = "allow"
too_many_arguments = "allow"
collapsible_if = "allow"


[profile.dev]
debug = 0

#最快编译时间
[profile.release]
lto = false
codegen-units = 256
panic = "abort"
debug = 0

# 最快运行性能
[profile.perf]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

# 最小二进制
[profile.minsize]
inherits = "release"
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
incremental = false
panic = "abort"
